scroll bar customized and fixed events collapsing bug

--- a/map/static/map/darkly.css
+++ b/map/static/map/darkly.css
@@ -10333,7 +10333,9 @@ a.text-dark:hover, a.text-dark:focus {
   }
   .navbar {
     display: none;
+    padding: 0px;
   }
+
   .badge {
     border: 1px solid #000;
   }
